--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,59 @@ h6{font-size: 16px;}
   left:-5px;
 
 }
+.about-wrapper{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(320px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
+  gap:100px;
+}
+
+#skills{
+  display:flex;
+  justify-content: space-evenly;
+  background-color: var(--previewShadow);
+}
+.social-links{
+  display:grid;
+  align-content: center;
+  text-align:center;
+}
+#social_img{
+  width: 100%;
+}
+.post-wrapper{
+  display:grid;
+  grid-template-columns: repeat(auto-fit,320px);
+  gap: 20px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.post{
+  border: 1px solid var(--borderColor);
+  -webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+  box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
+}
+.thumbnail{
+  display:block;
+  width:100%;
+  height:180px;
+  object-fit: cover;
+}
+.post-preview{
+  background-color:#fff;
+  padding:15px;
+}
+.post-title{
+  color:black;
+  margin:0;
+}
+.post-intro{
+  color:#4b5156;
+  font-size: 16px;
+
+}
 @media screen and (max-width: 1200px){
   .main-container{
     width: 95%;
