--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,15 @@
 
   --previewBg:rgb(251,249,243,0.8);
   --previewShadow:#f0ead6;
+
+  --buttonColor:black;
 }
 html,body{
   padding: 0;
   margin: 0;
+}
+body *{
+  transition: 0.3s;
 }
 h1,h2,h3,h4,h5, strong{
   color: var(--mainText);
@@ -22,7 +27,7 @@ h1,h2,h3,h4,h5, strong{
   font-weight: 500;
 }
 p,li,span,label,input,textarea{
-  color: var(--secondayTextt);
+  color: var(--secondayText);
   font-family: 'Roboto Mono', monospace;
 }
 a{
@@ -83,6 +88,9 @@ h6{font-size: 16px;}
   justify-content: space-between;
   align-items: center;
   background-color: var(--mainColor);
+}
+#nav-wrapper a{
+  color: var(--mainText);
 }
 #navigation{
   margin:0;
@@ -154,7 +162,7 @@ h6{font-size: 16px;}
   background-color: #fff;
 }
 #blue-mode{
-  background-color: #193734;
+  background-color: darkblue;
 }
 #green-mode{
   background-color: #78866b;
@@ -268,6 +276,41 @@ h6{font-size: 16px;}
   color:#4b5156;
   font-size: 16px;
 
+}
+#contact-form{
+  display:block;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid var(--borderColor);
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--mainColor);
+  margin-bottom: 50px;
+}
+#contact-form label{
+  line-height: 2.7em;
+}
+#contact-form textarea{
+  min-height: 100px;
+  font-size: 14px;
+}
+.input-field{
+  width:100%;
+  padding-top:10px;
+  padding-bottom: 10px;
+  background-color: var(--secondaryColor);
+  border-radius: 5px;
+  border:  1px solid var(--borderColor);
+  font-size: 14px;
+}
+#submit-btn{
+  margin-top:10px;
+  width:100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color:#fff;
+  background-color: var(--buttonColor);
+  border: none;
 }
 @media screen and (max-width: 1200px){
   .main-container{
